Bug 71836 - Submitting locale data for Puinave
Summary: Submitting locale data for Puinave
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-20 14:25 UTC by Michael Bauer
Modified: 2013-11-20 16:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Locale data for pui_CO (13.54 KB, text/plain)
2013-11-20 14:25 UTC, Michael Bauer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Bauer 2013-11-20 14:25:34 UTC
Created attachment 89530 [details]
Locale data for pui_CO

Still helping Larry get set up for Puinave (pui-CO). The locale has just been added (bug 71454) and we'd now like to submit a small locale dataset. He used Localegen and then we tweaked it a bit more.

There are two composed characters in the letterset string, they have a display problem on older Windows systems but I checked and they're fine on Win 8.

Some items are very similar or identical to South American Spanish, that's correct, the language has no localized forms for all week/month names.
Comment 1 Jorendc 2013-11-20 14:51:06 UTC
Thanks for helping!

@Eike: I think this is your area of expertise :)?
Comment 2 Eike Rathke (retired, only occasionally showing up) 2013-11-20 15:42:32 UTC
Yup, taking.
Comment 3 Eike Rathke (retired, only occasionally showing up) 2013-11-20 16:02:21 UTC
Test compiling this gave

Warning: ListSeparator equals DecimalSeparator.
Error: ListSeparator not ';' semicolon. Strongly recommended. Currently required.
Warning: QuotationStart may be wrong: U+00AB «
Warning: QuotationEnd may be wrong: U+00BB »
Warning: DoubleQuotationStart may be wrong: U+2018 ‘
Warning: DoubleQuotationEnd may be wrong: U+2019 ’
Warning: FormatCode formatindex="12" for currency uses parentheses for negative amounts, which probably is not correct for locales not based on en_US.
Warning: FormatCode formatindex="13" for currency uses parentheses for negative amounts, which probably is not correct for locales not based on en_US.
Warning: FormatCode formatindex="14" for currency uses parentheses for negative amounts, which probably is not correct for locales not based on en_US.
Warning: FormatCode formatindex="15" for currency uses parentheses for negative amounts, which probably is not correct for locales not based on en_US.
Warning: FormatCode formatindex="17" for currency uses parentheses for negative amounts, which probably is not correct for locales not based on en_US.

* I changed ListSeparator to ';' semicolon
* I swapped QuotationStart/End with DoubleQuotationStart/End
* I left the currency formats as they are because in es_CO.xml the same format
  codes are used
Comment 4 Commit Notification 2013-11-20 16:18:57 UTC
Michael Bauer committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d24a198f20d517cedf2ebdf86fcb151a4728f4ad

added Puinave_Colombia [pui-CO] locale data, fdo#71836



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-11-20 16:19:13 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=12b577cdab73ac5ae1a97fd2739ed4bfb652ea44

use Puinave_Colombia [pui-CO] locale data, fdo#71836



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-11-20 16:44:56 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ee4c3e9bdb7c9e005d9498ae196eef60f023311

added D/M DateAcceptancePattern, fdo#71836



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.