use Puinave_Colombia [pui-CO] locale data, fdo#71836

Change-Id: I59d553f7b70955de18562046f1d7aa5fae6e9fb1